# cmake_numpy

./: .gitignore  CMakeLists.txt  README.md  main.cpp
